@@ -172,6 +172,12 @@
 	<li>The GUI did not load or save the "strict HTML" setting
 	(STR #6)</li>
 
+	<li>The HTML version of the title page did not set the ALT
+	attribute for the title image (STR #10)</li>
+
+	<li>The HTML version of the table of contents did not
+	correctly nest the lists in the parent items (STR #10)</li>
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.23</H2>
