@@ -1,5 +1,5 @@
 /*
- * "$Id: toc.cxx,v 1.5.2.13 2004/05/09 15:04:39 mike Exp $"
+ * "$Id: toc.cxx,v 1.5.2.14 2004/09/23 20:16:14 mike Exp $"
  *
  *   Table of contents generator for HTMLDOC, a HTML document processing
  *   program.
@@ -312,8 +312,18 @@ parse_tree(tree_t *t)		/* I - Document tree */
           if (level < TocLevels)
           {
             if (level > last_level)
-              heading_parents[level] = htmlAddTree(heading_parents[level - 1],
-                                                   MARKUP_UL, NULL);
+	    {
+	      if (heading_parents[last_level]->last_child)
+        	heading_parents[level] =
+		    htmlAddTree(heading_parents[last_level]->last_child,
+                                MARKUP_UL, NULL);
+             else
+        	heading_parents[level] =
+		    htmlAddTree(heading_parents[last_level], MARKUP_UL, NULL);
+
+              DEBUG_printf(("level=%d, last_level=%d, created new UL parent %p\n",
+	                    level, last_level, heading_parents[level]));
+	    }
 
             if (level == 0)
             {
@@ -327,6 +337,8 @@ parse_tree(tree_t *t)		/* I - Document tree */
             }
             else
               parent = htmlAddTree(heading_parents[level], MARKUP_LI, NULL);
+
+            DEBUG_printf(("parent=%p\n", parent));
 
             if ((var = htmlGetVariable(t, (uchar *)"_HD_OMIT_TOC")) != NULL)
 	      htmlSetVariable(parent, (uchar *)"_HD_OMIT_TOC", var);
@@ -387,5 +399,5 @@ parse_tree(tree_t *t)		/* I - Document tree */
 
 
 /*
- * End of "$Id: toc.cxx,v 1.5.2.13 2004/05/09 15:04:39 mike Exp $".
+ * End of "$Id: toc.cxx,v 1.5.2.14 2004/09/23 20:16:14 mike Exp $".
  */
